--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
-.App {
+#page {
+  padding: 2em;
+}
+
+h1 {
+  margin-bottom: 1em;
+}
+
+#crossword-wrapper .clue.correct::before {
+  content: "✓";
+  display: inline-block;
+  text-decoration: none;
+  color: rgb(100, 200, 100);
+  margin-right: 0.25em;
+}
+
+#crossword-wrapper {
+  max-width: 66%;
+  margin: 2em auto 0 auto;
+}
+
+#messages {
+  background-color: rgb(230, 230, 230);
+  margin: 1em 0;
+  padding: 1em;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src:  url('./fonts/static/Inter-Regular.ttf') format('ttf'),
+  url('./fonts/static/Inter-Medium.ttf') format('ttf');
+}
+
+body {
+  margin: 0;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
+}
+
+span.important {
+  font-size: 1.9rem;
+  color: #FF585D;
+}
+
+.claim-inputs {
+  margin-top: 30px
+}
+
+.claim-inputs label {
+  font-size: 1.3em;
+}
+
+#claim-memo, #claim-account-id, .btn {
+  border-radius: 5px;
+  border: .1em solid #000;
+  padding: .5em 1em;
+  font-size: 1.66em;
+  margin: .5em;
+}
+
+.claim-inputs .btn {
+  margin: .5em;
+}
+
+#page h1, #page .no-puzzles {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#page .no-puzzles .cli-command {
+  text-align: left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#page.claim {
+  margin: 0 auto;
+  width: 576px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button, .highlight {
+  border-radius: 5px;
+  border: 0.1em solid #262626;
+  padding: 0.5em 1em;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover, button:focus, button:focus-within, .highlight:hover, .highlight:focus, .highlight:focus-within {
+  border-color: #5F8AFA;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#login {
+  text-align: right;
+}
+
+button {
+  background: transparent;
+  color: inherit;
+  cursor: pointer;
+  font: inherit;
+  outline: none;
 }
